--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <div id="trial-modal"></div>
     <div id="successful-registration"></div>
+    <div id="user-profile"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
